driver-for1C/src/main/java/ru/spb/awk/driver/for1c/parcer/cc/_1C/_1CParser.java
/* Generated By:JavaCC: Do not edit this line. _1CParser.java */
package ru.spb.awk.driver.for1c.parcer.cc._1C;
import java.io.StringReader;
import ru.spb.awk.driver.for1c.been.Field1C;
import ru.spb.awk.driver.for1c.been.Index1C;
import ru.spb.awk.driver.for1c.been.Table1C;
import ru.spb.awk.driver.for1c.been.TypeField1C;


public class _1CParser implements _1CParserConstants {

  private Table1C table;
  public static _1CParser makeParser(String query) {
    StringReader reader = new StringReader(query);
    _1CParser parser = new _1CParser(reader);
    parser.table = new Table1C();
    return parser;
  }
  public static void main(String args[]) throws ParseException {
    _1CParser parser = new _1CParser(System.in);
    parser.parse();
  }

  final public Table1C parse() throws ParseException {
    Name();
    jj_consume_token(S_NUMBER);
    jj_consume_token(K_FIELDS);
    FieldList();
    jj_consume_token(K_INDEXES);
    IndexList();
    jj_consume_token(K_RECORDLOCK);
    Recordlock();
    jj_consume_token(K_FILES);
    Records();
    Blob();
    Index();
    jj_consume_token(0);
     {if (true) return table;}
    throw new Error("Missing return statement in function");
  }

  final public void Name() throws ParseException {
    jj_consume_token(S_QUOTED_IDENTIFIER);
                            table.setName(token.image.substring(1,token.image.length()-1));
  }

  final public void FieldList() throws ParseException {
    FieldItem();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case S_QUOTED_IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      FieldItem();
    }
  }

  final public void FieldItem() throws ParseException {
    Field1C field = new Field1C(table);
    FieldName(field);
    FieldType(field);
    NullExists(field);
    FieldLength(field);
    FieldPrecision(field);
    FieldCaseSensitive(field);
  }

  final public void IndexList() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case S_QUOTED_IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      IndexItem();
    }
  }

  final public void IndexItem() throws ParseException {
    Index1C indx = new Index1C(table);
    IndexName(indx);
    IndexUnique(indx);
    IndexFields(indx);
  }

  final public void IndexFields(Index1C field) throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case S_QUOTED_IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(S_QUOTED_IDENTIFIER);
      jj_consume_token(S_NUMBER);
    }
  }

  final public void Recordlock() throws ParseException {
    jj_consume_token(S_QUOTED_IDENTIFIER);
                            table.setRecordlock(token.image.equals("\u005c"1\u005c""));
  }

  final public void Records() throws ParseException {
    jj_consume_token(S_NUMBER);
                 table.setRecordBlock(Integer.valueOf(token.image));
  }

  final public void Blob() throws ParseException {
    jj_consume_token(S_NUMBER);
                 table.setBlobBlock(Integer.valueOf(token.image));
  }

  final public void Index() throws ParseException {
    jj_consume_token(S_NUMBER);
                 table.setIndexBlock(Integer.valueOf(token.image));
  }

  final public void NullExists(Field1C field) throws ParseException {
    jj_consume_token(S_NUMBER);
                 field.setNullable(token.image.equals("1"));
  }

  final public void FieldLength(Field1C field) throws ParseException {
    jj_consume_token(S_NUMBER);
                 field.setLength(Integer.valueOf(token.image));
  }

  final public void FieldPrecision(Field1C field) throws ParseException {
    jj_consume_token(S_NUMBER);
                 field.setPrecision(Integer.valueOf(token.image));
  }

  final public void FieldCaseSensitive(Field1C field) throws ParseException {
    jj_consume_token(S_QUOTED_IDENTIFIER);
                            field.setCaseSensitive(token.image.equals("\u005c"CS\u005c""));
  }

  final public void FieldName(Field1C field) throws ParseException {
    jj_consume_token(S_QUOTED_IDENTIFIER);
                            field.setName(token.image.substring(1,token.image.length()-1));
  }

  final public void FieldType(Field1C field) throws ParseException {
    jj_consume_token(S_QUOTED_IDENTIFIER);
                            field.setType(TypeField1C.fromString(token.image.substring(1,token.image.length()-1)));
  }

  final public void IndexName(Index1C field) throws ParseException {
    jj_consume_token(S_QUOTED_IDENTIFIER);
                            field.setName(token.image.substring(1,token.image.length()-1));
  }

  final public void IndexUnique(Index1C field) throws ParseException {
    jj_consume_token(S_NUMBER);
                 field.setUnique(token.image.equals("1"));
  }

  /** Generated Token Manager. */
  public _1CParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x200000,0x200000,0x200000,};
   }

  /** Constructor with InputStream. */
  public _1CParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public _1CParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new _1CParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public _1CParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new _1CParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public _1CParser(_1CParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(_1CParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[22];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 3; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 22; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
